Update rate star color Update hide show more button when full list

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -216,3 +216,8 @@ th,
 td {
   @apply px-3 py-6;
 }
+
+.rc-rate-star-half .rc-rate-star-first,
+.rc-rate-star-full .rc-rate-star-second {
+  @apply text-active-color !important;
+}
