+ Add global state cart + Store global state cart to session storage

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,9 @@
   src: url("/assets/fonts/Haettenschweiler/Haettenschweiler-Regular.ttf");
 }
 
+html {
+  scroll-behavior: smooth;
+}
 :root {
   --primary-color: #e87171;
 }
