--- a/styles/styles.css
+++ b/styles/styles.css
@@ -257,3 +257,17 @@ td {
   background-color: rgb(10, 218, 152);
   text-align: center;
 }
+
+.ordered--success:before {
+  content: "\2713";
+  color: rgb(10, 218, 152);
+  position: relative;
+  width: 100%;
+  height: 40%;
+  font-size: 100px;
+  text-align: center;
+}
+
+.staff__description {
+  resize: none;
+}
