--- a/styles/styles.css
+++ b/styles/styles.css
@@ -268,6 +268,16 @@ td {
   text-align: center;
 }
 
+.ordered--reject:before {
+  content: "X";
+  color: red;
+  position: relative;
+  width: 100%;
+  height: 40%;
+  font-size: 100px;
+  text-align: center;
+}
+
 .staff__description {
   resize: none;
 }
